--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -539,7 +539,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 .cetagory-title-04{
 	color:#fff;
-	background:#843C0C;
+	background:rgb(145, 53, 53);
 	padding:5px 10px;
 	font-size:16px;
 	margin:10px 0 0 0;
@@ -549,7 +549,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 .gallery_cetagory-title {
 	padding: 8px;
 	text-align: center;
-	background: #3f51b5;
+	background: rgb(145, 53, 53);
 	color: #fff;
 	font-size: 20px;
 	margin-bottom: 10px;
@@ -716,7 +716,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     padding: 5px 15px;
     text-decoration: none;
     margin-bottom: 0;
-    background: #3f51b5;
+    background: rgb(145, 53, 53);
 	
 }
 
@@ -936,7 +936,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 .bottom-footer{
 	padding:10px 0;
-	background:#3f51b5;
+	background:rgb(145, 53, 53);
 	border-top:1px solid#222;
 	color:#eee;
 }
@@ -1133,7 +1133,7 @@ header.headline-header h1 {
 	margin-top:3px;
 }
 .dtails_btn a {
-	background: #710b0b;
+	background: rgb(145, 53, 53);
 	padding: 5px 15px;
 	color: #fff;
 	border-radius: 5px;
